use interfaces for interconnect drivers and controllers
