# pkg/api/v1/l2/l2.pb.go
@@ -95,8 +95,6 @@ type Stack struct {
 	VpcId                int32    `protobuf:"varint,1,opt,name=vpc_id,json=vpcId,proto3" json:"vpc_id,omitempty"`
 	BridgeLinkName       string   `protobuf:"bytes,2,opt,name=bridge_link_name,json=bridgeLinkName,proto3" json:"bridge_link_name,omitempty"`
 	BridgeLinkIndex      int32    `protobuf:"varint,3,opt,name=bridge_link_index,json=bridgeLinkIndex,proto3" json:"bridge_link_index,omitempty"`
-	VtepLinkName         string   `protobuf:"bytes,4,opt,name=vtep_link_name,json=vtepLinkName,proto3" json:"vtep_link_name,omitempty"`
-	VtepLinkIndex        int32    `protobuf:"varint,5,opt,name=vtep_link_index,json=vtepLinkIndex,proto3" json:"vtep_link_index,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -144,20 +142,6 @@ func (m *Stack) GetBridgeLinkName() string {
 func (m *Stack) GetBridgeLinkIndex() int32 {
 	if m != nil {
 		return m.BridgeLinkIndex
-	}
-	return 0
-}
-
-func (m *Stack) GetVtepLinkName() string {
-	if m != nil {
-		return m.VtepLinkName
-	}
-	return ""
-}
-
-func (m *Stack) GetVtepLinkIndex() int32 {
-	if m != nil {
-		return m.VtepLinkIndex
 	}
 	return 0
 }
@@ -211,7 +195,7 @@ func (m *StackResponse) GetStatus() *StackStatusResponse {
 
 type StackStatusResponse struct {
 	Bridge               LinkStatus `protobuf:"varint,1,opt,name=bridge,proto3,enum=vpc.l2.LinkStatus" json:"bridge,omitempty"`
-	Vtep                 LinkStatus `protobuf:"varint,2,opt,name=vtep,proto3,enum=vpc.l2.LinkStatus" json:"vtep,omitempty"`
+	Transport            LinkStatus `protobuf:"varint,2,opt,name=transport,proto3,enum=vpc.l2.LinkStatus" json:"transport,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}   `json:"-"`
 	XXX_unrecognized     []byte     `json:"-"`
 	XXX_sizecache        int32      `json:"-"`
@@ -249,9 +233,9 @@ func (m *StackStatusResponse) GetBridge() LinkStatus {
 	return LinkStatus_DOWN
 }
 
-func (m *StackStatusResponse) GetVtep() LinkStatus {
+func (m *StackStatusResponse) GetTransport() LinkStatus {
 	if m != nil {
-		return m.Vtep
+		return m.Transport
 	}
 	return LinkStatus_DOWN
 }
@@ -563,47 +547,46 @@ func init() {
 func init() { proto.RegisterFile("l2.proto", fileDescriptor_f692411d37028fef) }
 
 var fileDescriptor_f692411d37028fef = []byte{
-	// 641 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x54, 0xcb, 0x6e, 0xd3, 0x40,
-	0x14, 0x8d, 0x93, 0xd8, 0x4d, 0xae, 0x93, 0x34, 0xbd, 0x6d, 0x51, 0x28, 0x9b, 0xca, 0xa5, 0x55,
-	0x69, 0xa5, 0x08, 0xb9, 0xb0, 0x60, 0x85, 0xfa, 0x40, 0xc5, 0x52, 0x31, 0xc8, 0x11, 0x54, 0x62,
-	0x13, 0x4d, 0x3d, 0xa3, 0x66, 0x14, 0xc7, 0x71, 0x63, 0x27, 0xd0, 0xdf, 0xe0, 0x5f, 0xf8, 0x00,
-	0xf8, 0x32, 0x34, 0x8f, 0x24, 0x4e, 0x49, 0x23, 0xc4, 0xce, 0x73, 0xee, 0x99, 0x33, 0xe7, 0xcc,
-	0xbd, 0x63, 0xa8, 0x44, 0x6e, 0x3b, 0x19, 0x0d, 0xb3, 0x21, 0x5a, 0x93, 0x24, 0x6c, 0x47, 0xae,
-	0xb3, 0x0f, 0xb5, 0x4e, 0x46, 0xc2, 0x7e, 0xc0, 0xee, 0xc6, 0x2c, 0xcd, 0x70, 0x1b, 0x44, 0xa5,
-	0xcb, 0x69, 0xcb, 0xd8, 0x35, 0x0e, 0xcd, 0xc0, 0x9c, 0x24, 0xa1, 0x47, 0x9d, 0xdf, 0x06, 0x98,
-	0x92, 0xf7, 0x08, 0x01, 0x0f, 0xa1, 0x79, 0x33, 0xe2, 0xf4, 0x96, 0x75, 0x23, 0x1e, 0xf7, 0xbb,
-	0x31, 0x19, 0xb0, 0x56, 0x71, 0xd7, 0x38, 0xac, 0x06, 0x0d, 0x85, 0x5f, 0xf1, 0xb8, 0xef, 0x93,
-	0x01, 0xc3, 0x23, 0xd8, 0xc8, 0x33, 0x79, 0x4c, 0xd9, 0xf7, 0x56, 0x49, 0x6a, 0xad, 0xcf, 0xa9,
-	0x9e, 0x80, 0xf1, 0x39, 0x34, 0x26, 0x19, 0x4b, 0x72, 0x9a, 0x65, 0xa9, 0x59, 0x13, 0xe8, 0x4c,
-	0xf1, 0x00, 0xd6, 0xe7, 0x2c, 0xa5, 0x67, 0x4a, 0xbd, 0xfa, 0x94, 0x26, 0xd5, 0x1c, 0x0e, 0x75,
-	0x9d, 0x35, 0x4d, 0x86, 0x71, 0xca, 0x70, 0x0f, 0xcc, 0x54, 0x00, 0x32, 0x8a, 0xed, 0xd6, 0xdb,
-	0xea, 0x52, 0xda, 0x8a, 0xa5, 0x6a, 0x78, 0x02, 0x56, 0x9a, 0x91, 0x6c, 0x9c, 0xca, 0x3c, 0xb6,
-	0xfb, 0x6c, 0x81, 0xd5, 0x91, 0xa5, 0xa9, 0x62, 0xa0, 0xa9, 0x0e, 0x87, 0xcd, 0x25, 0x65, 0x3c,
-	0x02, 0x4b, 0x45, 0x94, 0x27, 0x36, 0x5c, 0x9c, 0x6a, 0x09, 0x93, 0x9a, 0xab, 0x19, 0x78, 0x00,
-	0x65, 0x61, 0x5f, 0x9e, 0xba, 0x9c, 0x29, 0xeb, 0xce, 0x1d, 0xd8, 0xf2, 0xa8, 0xf3, 0x1e, 0x89,
-	0x6f, 0xd9, 0x63, 0xfd, 0x79, 0x02, 0x16, 0x09, 0x33, 0x3e, 0x8c, 0x75, 0x57, 0xf4, 0x2a, 0x97,
-	0xae, 0xf4, 0xef, 0xe9, 0x7e, 0x1a, 0x00, 0x3e, 0x0f, 0x57, 0xcf, 0x0c, 0x36, 0xa0, 0xc8, 0xa9,
-	0x3e, 0xae, 0xc8, 0xa9, 0x68, 0x66, 0x3a, 0xbe, 0x89, 0x59, 0xd6, 0x9d, 0x44, 0x24, 0x16, 0x74,
-	0x71, 0x64, 0x3d, 0xa8, 0x29, 0xf4, 0x4b, 0x44, 0x62, 0x8f, 0xe2, 0x3e, 0x34, 0x06, 0x24, 0x1e,
-	0x93, 0x28, 0xba, 0xef, 0x12, 0x4a, 0x19, 0x95, 0x2d, 0xaf, 0x04, 0xf5, 0x29, 0x7a, 0x2a, 0x40,
-	0xdc, 0x03, 0x0d, 0x74, 0x7b, 0xdf, 0x08, 0xa5, 0x23, 0xd9, 0xf1, 0x6a, 0x50, 0x53, 0xe0, 0x7b,
-	0x89, 0x49, 0x07, 0x49, 0xcb, 0xda, 0x2d, 0x49, 0x07, 0x89, 0xf3, 0xc3, 0x80, 0x92, 0xcf, 0xc3,
-	0x15, 0x77, 0xa4, 0xc5, 0xf4, 0x1d, 0xf5, 0xe6, 0x32, 0xca, 0xac, 0x0a, 0x82, 0x50, 0xce, 0xcd,
-	0xa2, 0xfc, 0xc6, 0x2d, 0x30, 0xf3, 0x93, 0xa7, 0x16, 0x82, 0x29, 0xb2, 0xb6, 0x2c, 0x19, 0x54,
-	0x7e, 0x6b, 0x53, 0x6b, 0x33, 0x53, 0x6f, 0x61, 0xc3, 0xe7, 0xe1, 0xdf, 0x83, 0xa2, 0xdb, 0xb2,
-	0x62, 0x50, 0x74, 0x37, 0xd6, 0xc0, 0x7c, 0x37, 0x48, 0xb2, 0xfb, 0xa3, 0x63, 0x80, 0x79, 0x19,
-	0x2b, 0x50, 0xbe, 0xf8, 0x78, 0xed, 0x37, 0x0b, 0x68, 0x41, 0xf1, 0xf3, 0xa7, 0xa6, 0x81, 0x36,
-	0xac, 0x7d, 0xf0, 0x3a, 0x1d, 0xcf, 0xbf, 0x6c, 0x16, 0xdd, 0x5f, 0x25, 0xa8, 0x5e, 0xb9, 0x1d,
-	0x36, 0x9a, 0xf0, 0x90, 0xe1, 0x1b, 0xa8, 0x9c, 0x52, 0xaa, 0x5e, 0xf8, 0xd6, 0xe2, 0x33, 0x50,
-	0x4d, 0xde, 0xd9, 0x7e, 0x80, 0x2a, 0xa3, 0x4e, 0x41, 0x6c, 0xbd, 0x64, 0xd9, 0x7f, 0x6d, 0x3d,
-	0xd3, 0xa3, 0xab, 0x1d, 0x2f, 0xdf, 0xbd, 0x6a, 0x22, 0x9d, 0x02, 0xbe, 0x02, 0xfb, 0x82, 0x45,
-	0x2c, 0x63, 0xab, 0x1c, 0xcc, 0x5e, 0xb6, 0xbc, 0x28, 0xa7, 0x80, 0xaf, 0xc1, 0xbe, 0x26, 0x59,
-	0xd8, 0x93, 0xac, 0x14, 0x17, 0xeb, 0x3b, 0x9b, 0x0b, 0x22, 0xea, 0x61, 0x39, 0x85, 0x97, 0x06,
-	0x1e, 0x83, 0x75, 0x4a, 0xa9, 0xef, 0x9d, 0xe3, 0xac, 0x21, 0xf3, 0x77, 0xb0, 0x63, 0xe7, 0x30,
-	0xa7, 0x80, 0x2f, 0xa0, 0xaa, 0x9c, 0x09, 0x7e, 0xbe, 0xb6, 0xcc, 0x4e, 0xd5, 0xf7, 0xce, 0xf5,
-	0x35, 0x2c, 0x50, 0x9f, 0xe6, 0x16, 0x0f, 0xb3, 0x9f, 0x95, 0xbf, 0x16, 0x23, 0xf7, 0xc6, 0x92,
-	0x7f, 0xf4, 0x93, 0x3f, 0x01, 0x00, 0x00, 0xff, 0xff, 0xd8, 0x58, 0x0b, 0x10, 0xdd, 0x05, 0x00,
+	// 625 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x54, 0xdd, 0x4e, 0xdb, 0x4c,
+	0x10, 0x8d, 0x93, 0xd8, 0x24, 0x63, 0x92, 0x2f, 0x0c, 0xf0, 0xc9, 0xa5, 0x37, 0x91, 0x29, 0x52,
+	0x0a, 0x52, 0x84, 0x4c, 0x7b, 0xd1, 0xab, 0x8a, 0x9f, 0x8a, 0x5a, 0xa2, 0x6e, 0x95, 0xa8, 0x45,
+	0xea, 0x4d, 0xb4, 0x78, 0x57, 0x64, 0x85, 0xb3, 0x31, 0xf6, 0x26, 0x2d, 0xaf, 0xd1, 0x77, 0xe9,
+	0x03, 0xf4, 0xcd, 0x2a, 0xef, 0x2e, 0x24, 0xa1, 0x21, 0xaa, 0x7a, 0xe7, 0x3d, 0xe7, 0xec, 0xcc,
+	0x99, 0xd9, 0x19, 0x43, 0x2d, 0x09, 0xba, 0x69, 0x36, 0x96, 0x63, 0x74, 0xa6, 0x69, 0xdc, 0x4d,
+	0x02, 0x7f, 0x0f, 0xd6, 0xfb, 0x92, 0xc4, 0x37, 0x3d, 0x76, 0x3b, 0x61, 0xb9, 0xc4, 0x6d, 0x28,
+	0x98, 0x01, 0xa7, 0x9e, 0xd5, 0xb6, 0x3a, 0x76, 0xcf, 0x9e, 0xa6, 0x71, 0x48, 0x7d, 0x09, 0xb6,
+	0x92, 0x3d, 0xc1, 0x63, 0x07, 0x5a, 0x57, 0x19, 0xa7, 0xd7, 0x6c, 0x90, 0x70, 0x71, 0x33, 0x10,
+	0x64, 0xc4, 0xbc, 0x72, 0xdb, 0xea, 0xd4, 0x7b, 0x4d, 0x8d, 0x5f, 0x70, 0x71, 0x13, 0x91, 0x11,
+	0xc3, 0x7d, 0xd8, 0x98, 0x57, 0x72, 0x41, 0xd9, 0x77, 0xaf, 0xa2, 0x62, 0xfd, 0x37, 0x93, 0x86,
+	0x05, 0xec, 0x73, 0x68, 0x18, 0x73, 0x79, 0x3a, 0x16, 0x39, 0xc3, 0x5d, 0xb0, 0xf3, 0x02, 0x50,
+	0xc9, 0xdd, 0xa0, 0xd1, 0xd5, 0x55, 0x74, 0xb5, 0x4a, 0x73, 0x78, 0x04, 0x4e, 0x2e, 0x89, 0x9c,
+	0xe4, 0xca, 0x81, 0x1b, 0x3c, 0x5f, 0x50, 0xf5, 0x15, 0x75, 0x1f, 0xb1, 0x67, 0xa4, 0x7e, 0x0e,
+	0x9b, 0x4b, 0x68, 0xdc, 0x07, 0x47, 0x9b, 0x52, 0x19, 0x9b, 0x01, 0xde, 0xc7, 0x2a, 0x4c, 0x1a,
+	0xad, 0x51, 0xe0, 0x21, 0xd4, 0x65, 0x46, 0x44, 0x9e, 0x8e, 0x33, 0xa9, 0x52, 0x2f, 0x97, 0xcf,
+	0x44, 0xfe, 0x2d, 0xb8, 0x2a, 0xe9, 0xe9, 0x90, 0x88, 0x6b, 0xf6, 0x54, 0x6f, 0xff, 0x07, 0x87,
+	0xc4, 0x92, 0x8f, 0x85, 0xe9, 0xa8, 0x39, 0xcd, 0xd5, 0x59, 0xf9, 0xfb, 0x3a, 0x7f, 0x5a, 0x00,
+	0x11, 0x8f, 0x57, 0x3f, 0x37, 0x36, 0xa1, 0xcc, 0xa9, 0x49, 0x57, 0xe6, 0x14, 0x5f, 0x40, 0x33,
+	0x9f, 0x5c, 0x09, 0x26, 0x07, 0xd3, 0x84, 0x88, 0x42, 0x5e, 0xa4, 0x6c, 0xf4, 0xd6, 0x35, 0xfa,
+	0x25, 0x21, 0x22, 0xa4, 0xb8, 0x07, 0xcd, 0x11, 0x11, 0x13, 0x92, 0x24, 0x77, 0x03, 0x42, 0x29,
+	0xa3, 0x5e, 0xb5, 0x6d, 0x75, 0x6a, 0xbd, 0xc6, 0x3d, 0x7a, 0x5c, 0x80, 0xb8, 0x0b, 0x06, 0x18,
+	0x0c, 0xbf, 0x11, 0x4a, 0x33, 0xcf, 0x56, 0x79, 0xd6, 0x35, 0xf8, 0x5e, 0x61, 0xca, 0x41, 0xea,
+	0x39, 0xed, 0x8a, 0x72, 0x90, 0xfa, 0x3f, 0x2c, 0xa8, 0x44, 0x3c, 0x5e, 0xd1, 0x23, 0x13, 0xcc,
+	0xf4, 0x68, 0x38, 0x0b, 0xa3, 0xcd, 0xea, 0x42, 0x10, 0xaa, 0x6a, 0x36, 0xab, 0x0a, 0x51, 0xdf,
+	0xb8, 0x05, 0xb6, 0x9e, 0x42, 0x5b, 0x47, 0x54, 0x87, 0x42, 0x59, 0xd4, 0xea, 0x39, 0xaa, 0x50,
+	0xf5, 0x6d, 0x4c, 0xad, 0x3d, 0x98, 0x7a, 0x0b, 0x1b, 0x11, 0x8f, 0xff, 0x1c, 0x19, 0xf3, 0x2c,
+	0x2b, 0x46, 0xc6, 0xbc, 0xc6, 0x1a, 0xd8, 0xef, 0x46, 0xa9, 0xbc, 0xdb, 0x3f, 0x00, 0x98, 0xd1,
+	0x58, 0x83, 0xea, 0xd9, 0xc7, 0xcb, 0xa8, 0x55, 0x42, 0x07, 0xca, 0x9f, 0x3f, 0xb5, 0x2c, 0x74,
+	0x61, 0xed, 0x43, 0xd8, 0xef, 0x87, 0xd1, 0x79, 0xab, 0x1c, 0xfc, 0xaa, 0x40, 0xfd, 0x22, 0xe8,
+	0xb3, 0x6c, 0xca, 0x63, 0x86, 0x6f, 0xa0, 0x76, 0x4c, 0xa9, 0xde, 0xce, 0xad, 0xc5, 0x85, 0xd0,
+	0x8f, 0xbc, 0xb3, 0xfd, 0x08, 0xd5, 0x46, 0xfd, 0x52, 0x71, 0xf5, 0x9c, 0xc9, 0x7f, 0xba, 0x7a,
+	0x62, 0x46, 0xd7, 0x38, 0x5e, 0x7e, 0x7b, 0xd5, 0x44, 0xfa, 0x25, 0x7c, 0x05, 0xee, 0x19, 0x4b,
+	0x98, 0x64, 0xab, 0x1c, 0x3c, 0xec, 0xb8, 0x6a, 0x94, 0x5f, 0xc2, 0xd7, 0xe0, 0x5e, 0x12, 0x19,
+	0x0f, 0x95, 0x2a, 0xc7, 0x45, 0x7e, 0x67, 0x73, 0x21, 0x88, 0x5e, 0x2c, 0xbf, 0x74, 0x68, 0xe1,
+	0x01, 0x38, 0xc7, 0x94, 0x46, 0xe1, 0x29, 0x3e, 0x3c, 0xc8, 0x6c, 0x0f, 0x76, 0xdc, 0x39, 0xcc,
+	0x2f, 0xe1, 0x4b, 0xa8, 0x6b, 0x67, 0x85, 0x7e, 0x9e, 0x5b, 0x66, 0xa7, 0x1e, 0x85, 0xa7, 0xa6,
+	0x0d, 0x0b, 0xd2, 0x67, 0x73, 0x87, 0xc7, 0xb5, 0x9f, 0x54, 0xbf, 0x96, 0x93, 0xe0, 0xca, 0x51,
+	0x3f, 0xe3, 0xa3, 0xdf, 0x01, 0x00, 0x00, 0xff, 0xff, 0xa6, 0x98, 0x9f, 0xa8, 0x98, 0x05, 0x00,
 	0x00,
 }
 
